assets/sass/_core.scss
/* ... */
.cf:before, .cf:after {
    content: " "; 
    display: table; 
}
.cf:after { clear: both; }
.cf { *zoom: 1; }
.text-center {text-align:center;}
.fw,.full {width:100%!important;float:left !important}
.nomtop {margin-top:0!important;}
.nombottom {margin-bottom:0!important;}
/* Text meant only for screen readers. */
.sr {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
	&:focus {
		background-color: #333;
		border-radius: 3px;
		box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
		clip: auto !important;
		color: #FFF;
		display: block;
		@include font-size(0.875);
		font-weight: bold;
		height: auto;
		left: 5px;
		line-height: normal;
		padding: 15px 23px 14px;
		text-decoration: none;
		top: 5px;
		width: auto;
		z-index: 100000; /* Above WP toolbar. */
	}
}
.flexwrap {
	position: relative;
	@include flexgroup();
}
.site {
  position: relative;
  overflow-x: hidden;
  overflow-y: auto;
  min-height: 30em;
}

/* Header */
#site-logo {
  display: inline-block;
  width: 220px;
  transition: all ease .3s;
  a, img {
    display: block;
    width: 100%;
    height: auto;
    float: left;
  }
}

.wrapper {
  max-width: $wrapper;
  width: 100%;
  margin:0 auto;
  padding-left: 15px;
  padding-right: 15px;
  position: relative;
}
.site-header {
  background: $subtle_white;
  position: relative;
  z-index: 100;
  @include tab {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
  }
  .wrapper {
    padding-top: 15px;
    padding-bottom: 20px;
    @include mid {
      max-width: 100%;
      padding-left: 12vw;
      padding-right: 0;
    }
  }
  .flexwrap {
    @include flexgroup();
    @include flexbox-align-items(center);
    @include flexbox-justify(space-between);
  }
  @include max($tabwidth) {
    background: #FFF;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 85px;
    #site-logo {
      width: 135px;
      position: relative;
      top: -5px;
      transition: all ease .3s;
    }
    .mobile-menu {
      top: 2px;
      right: 10px;
    }
  }
}
.slider {
  height: 60vh;
  padding-top: 85px;
  @include xs {
    padding-top: 0;
    height: 85vh;
  }
}
body.logged-in.admin-bar {
  .slider {
    padding-top: 0;
  }
}
.swiper, .swiper-wrapper, .swiper-slide {
  height: 100%;
}
.slider {
  overflow: hidden;
  .swiper-slide {
    position: relative;
    height: 100%;
  }
  .slide-image {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-size: cover;
    background-color: #545454;
    background-repeat: no-repeat;
    background-position: bottom center;
    @include tab {
      background-position: center;
    }
    &:before {
      content: "";
      display: block;
      width: 100%;
      height: 100%;
      position: absolute;
      top: 0;
      left: 0;
      background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
      background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
      background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
    }
    &.desktop {
      display: none;
      @include tab {
        display: block;
      }
    }
    &.mobile {
      display: block;
      @include tab {
        display: none;
      }
    }
  }
  .slide-text {
    color: #FFF;
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    padding-left: 1em;
    padding-right: 1em;
    @include tab {
      padding-left: 0;
      padding-right: 0;
    }
    .wrap {
      max-width: 1335px;
      width: 100%;
      height: 100%;
      margin: 0 auto;
      @include flexgroup();
      @include flexbox-align-items(center);
      @include flexbox-justify(flex-start);
      .inline {
        max-width: 600px;
        width: 100%;
        margin: 0 0 0;
        padding: 20px 20px 30px;
        background: $primary;
        position: relative;
        transform: translateY(-1vh);
        @include tab {
          margin: 15px 0 0;
          transform: translateY(-4vh);
          padding: 2vw 2vw 2.3vw;
        }
      }
    }
    .slideHeading {
      font-family: $font_secondary;
      font-size: 1.4em;
      font-weight: 400;
      line-height: 1.3;
      margin:0 0 15px;
      @include xs {
        line-height: 1.2;
        font-size: 2em;
      }
      @include tab {
        font-size: 2.8em;
      }
    }
    .slideDetails {
      font-size: 1.3em;
      line-height: 1.3;
      margin-bottom: 20px;
    }
    .slideBtn {
      display: inline-block;
      text-decoration: none;
      background: $light_blue;
      padding: 15px 20px;
      color: #FFF;
      font-size: 15px;
      line-height: 1.1;
      margin:0 15px;
      position: absolute;
      bottom: -20px;
      &:hover {
        background: tint($light_blue,25%);
      }
    }
  }
  .textwrap {
    .wrap {
      text-align: center;
      @include flexgroup();
      @include flexbox-align-items(center);
      @include flexbox-justify(center);
    }
  }
}
/* ... */

